feat: database, nickname

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,15 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MentalCalculation"
-        android:hardwareAccelerated="true">
+        android:theme="@style/Theme.MentalCalculation">
+        <activity
+            android:name=".activities.NicknameActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.AboutActivity"
             android:exported="false" />
